基本完成该项目框架

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <img src="./images/title1_2.png" alt="">
             </div>
         </div>
-        <div class="section section3 active">
+        <div class="section section3">
             <span class="title title_begin_status">
                 <img src="./images//title3.png" alt="">
             </span>
@@ -40,7 +40,15 @@
                 <img src="./images/p3ui_tab.png" alt="">
             </div>
         </div>
-        <div class="section section4">第四屏</div>
+        <div class="section section4 active">
+            <div class="sec4Box sec4Box_begin_status">
+                <img src="./images/p2pop1.png" alt="">
+                <img src="./images/p2pop2.png" alt="">
+                <img src="./images/p2pop3.png" alt="">
+                <img src="./images/p2pop4.png" alt="">
+                <img src="./images/p2pop5.png" alt="">
+            </div>
+        </div>
     </div>
 </body>
 <!-- 严格按顺序引入js文件 -->
